[gd_scene load_steps=11 format=3 uid="uid://bkufwdw0nnsfc"]

[ext_resource type="Script" path="res://Scripts/bomb.gd" id="1_0p5um"]
[ext_resource type="Shader" uid="uid://dlroce5v6b0te" path="res://Scripts/shaders/hit_shader.tres" id="2_mx2dx"]
[ext_resource type="Texture2D" uid="uid://bp6mk0ui8607q" path="res://Assets/Sprites/items/bomb.png" id="3_810r0"]
[ext_resource type="AudioStream" uid="uid://cxxp1kykyi7u2" path="res://Assets/Audio/sound effects/bomb fuse.mp3" id="4_ncsn4"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8as0q"]
shader = ExtResource("2_mx2dx")
shader_parameter/enabled = false
shader_parameter/tint = Color(0.752941, 0.819608, 0.8, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_yqidf"]
atlas = ExtResource("3_810r0")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r81aq"]
atlas = ExtResource("3_810r0")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gtdi2"]
atlas = ExtResource("3_810r0")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jt0pr"]
atlas = ExtResource("3_810r0")
region = Rect2(128, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_dgvc8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yqidf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r81aq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gtdi2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jt0pr")
}],
"loop": false,
"name": &"default",
"speed": 2.0
}]

[node name="bomb" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_0p5um")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_8as0q")
position = Vector2(0, -4)
sprite_frames = SubResource("SpriteFrames_dgvc8")

[node name="life_time_timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="fuse_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_ncsn4")
volume_db = 5.0
bus = &"Sound Effect"

[connection signal="timeout" from="life_time_timer" to="." method="_on_life_time_timer_timeout"]
